gengo/tests/snapshots/analyzers_tests__analyzers_tests__test_with_heuristics__simple.snap
---
source: gengo/tests/analyzers_tests.rs
expression: "analyzers.simple(filepath, contents)"
---
[
    Analyzer {
        language: Language {
            name: "JSON",
            category: Data,
            color: "#000000",
        },
        matchers: [
            Filepath(
                FilepathMatcher {
                    extensions: {
                        "json",
                    },
                    filenames: {},
                    patterns: [],
                },
            ),
        ],
        heuristics: [],
        priority: 50,
    },
    Analyzer {
        language: Language {
            name: "JSON with Comments",
            category: Data,
            color: "#FFFFFF",
        },
        matchers: [
            Filepath(
                FilepathMatcher {
                    extensions: {
                        "json",
                        "jsonc",
                    },
                    filenames: {},
                    patterns: [],
                },
            ),
        ],
        heuristics: [
            Regex(
                "(?m)^\\s*?//",
            ),
        ],
        priority: 50,
    },
]
