gengo/tests/snapshots/analyzers_tests__analyzers_tests__test_with_heuristics__with_heuristics.snap
---
source: gengo/tests/analyzers_tests.rs
expression: "analyzers.with_heuristics(filepath, contents, 1 << 20)"
---
[
    Analyzer {
        language: Language {
            name: "JSON with Comments",
            category: Data,
            color: "#FFFFFF",
        },
        matchers: [
            Filepath(
                FilepathMatcher {
                    extensions: {
                        "json",
                        "jsonc",
                    },
                    filenames: {},
                    patterns: [],
                },
            ),
        ],
        heuristics: [
            Regex(
                "(?m)^\\s*?//",
            ),
        ],
        priority: 50,
    },
]
